WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
187514
[WPE] AC for fixed-position elements is not enabled
https://bugs.webkit.org/show_bug.cgi?id=187514
Summary
[WPE] AC for fixed-position elements is not enabled
Zan Dobersek
Reported
2018-07-10 03:48:05 PDT
[WPE] AC for fixed-position elements is not enabled
Attachments
Patch
(2.08 KB, patch)
2018-07-10 04:11 PDT
,
Zan Dobersek
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ews113 for mac-sierra
(3.00 MB, application/zip)
2018-07-10 05:51 PDT
,
EWS Watchlist
no flags
Details
Archive of layout-test-results from ews206 for win-future
(12.79 MB, application/zip)
2018-07-10 05:56 PDT
,
EWS Watchlist
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Zan Dobersek
Comment 1
2018-07-10 04:11:43 PDT
Created
attachment 344688
[details]
Patch
EWS Watchlist
Comment 2
2018-07-10 05:51:40 PDT
Comment on
attachment 344688
[details]
Patch
Attachment 344688
[details]
did not pass mac-debug-ews (mac): Output:
https://webkit-queues.webkit.org/results/8493682
New failing tests: media/media-fragments/TC0037.html
EWS Watchlist
Comment 3
2018-07-10 05:51:42 PDT
Created
attachment 344689
[details]
Archive of layout-test-results from ews113 for mac-sierra The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews113 Port: mac-sierra Platform: Mac OS X 10.12.6
EWS Watchlist
Comment 4
2018-07-10 05:56:30 PDT
Comment on
attachment 344688
[details]
Patch
Attachment 344688
[details]
did not pass win-ews (win): Output:
https://webkit-queues.webkit.org/results/8493747
New failing tests: http/tests/security/contentSecurityPolicy/video-with-http-url-allowed-by-csp-media-src-star.html
EWS Watchlist
Comment 5
2018-07-10 05:56:42 PDT
Created
attachment 344690
[details]
Archive of layout-test-results from ews206 for win-future The attached test failures were seen while running run-webkit-tests on the win-ews. Bot: ews206 Port: win-future Platform: CYGWIN_NT-6.1-2.9.0-0.318-5-3-x86_64-64bit
Zan Dobersek
Comment 6
2018-07-11 01:18:31 PDT
Comment on
attachment 344688
[details]
Patch Clearing flags on attachment: 344688 Committed
r233726
: <
https://trac.webkit.org/changeset/233726
>
Zan Dobersek
Comment 7
2018-07-11 01:18:35 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 8
2018-07-11 01:20:25 PDT
<
rdar://problem/42061692
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug