[WPE] AC for fixed-position elements is not enabled https://bugs.webkit.org/show_bug.cgi?id=187514

Reviewed by Carlos Garcia Campos.

Enable accelerated compositing for fixed-position elements when using
AcceleratedDrawingArea and AC is force-enabled. This effectively enables
this option for the WPE port which is using the AcceleratedDrawingArea
implementation and not DrawingAreaImpl like the GTK+ port.

* WebProcess/WebPage/AcceleratedDrawingArea.cpp:
(WebKit::AcceleratedDrawingArea::updatePreferences):


Canonical link: https://commits.webkit.org/202780@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@233726 268f45cc-cd09-0410-ab3c-d52691b4dbfc